--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 								<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 									<div class="content">
 										<h2>The Halloween Smile</h2>
-										<p>One of the first projects I did on Blender. It was a project focused basic modelling and textureing. All the textures in this priject were procedurally-made. </p>
+										<p>One of the first projects I did on Blender. It was a project focused basic modelling and texturing. All the textures in this project were procedurally-made. </p>
 										<ul class="actions stacked">
 											<li><a href="#" class="button">Learn More</a></li>
 										</ul>
