--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 										<img src="images/gallery/thumbs/03.png" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Drowning in Worlly Pleasures</h3>
+										<h3>Drowning in Worldly Pleasures</h3>
 										<p>Project testing out the wter caustics and the beauty of ray tracing in Blender.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
