--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 									</a>
 									<div class="caption">
 										<h3>Drowning in Worldly Pleasures</h3>
-										<p>Project testing out the wter caustics and the beauty of ray tracing in Blender.</p>
+										<p>Project testing out the water caustics and the beauty of ray tracing in Blender.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
