--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Tranquil</h2>
-							<p>A self project I made getting inspiration from versace perfume advertisment. The project came out to be very fruitful to me as it helped me getting familiar with product lighting and product showcase. Also it helped me improve my skills in product rendering and in general reflective surface rendering.</p>
+							<p>A self project I made getting inspiration from Versace perfume advertisement. The project came out to be very fruitful to me as it helped me getting familiar with product lighting and product showcase. Also it helped me improve my skills in product rendering and in general reflective surface rendering.</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="https://www.artstation.com/artwork/Lezzlw" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -47,9 +47,9 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>The Neon Abyss</h2>
-							<p>An Environment design project I took in. One of the most ambitious project of mine, took lots of inspirition from work of Ian Hubert and William Landgren. Through the project I learnt a lot about environment design, environment lighting and City Building in Blender. </p>
+							<p>An Environment design project I took in. One of the most ambitious project of mine, took lots of insparition from work of Ian Hubert and William Landgren. Through the project I learnt a lot about environment design, environment lighting and City Building in Blender. </p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="https://www.artstation.com/artwork/lR22LY" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -63,7 +63,7 @@
 							<h2>Pride Heart</h2>
 							<p>A geometry nodes project, taking advantage of the excelent procedural geometry nodes in blender to create the beating pride heart, moving in a wavy motion. Also was an attemt to support the LGBTQ community.</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="https://www.artstation.com/artwork/RnxxgO" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -76,7 +76,7 @@
 										<h2>The Halloween Smile</h2>
 										<p>One of the first projects I did on Blender. It was a project focused basic modelling and texturing. All the textures in this project were procedurally-made. </p>
 										<ul class="actions stacked">
-											<li><a href="#" class="button">Learn More</a></li>
+											<li><a href="https://www.artstation.com/artwork/B3NNV4" class="button">Learn More</a></li>
 										</ul>
 									</div>
 									<div class="image">
@@ -97,7 +97,7 @@
 			<h2>Bus Reservation System</h2>
 			<p>A C project that showcases a functional bus reservation system.</p>
 			<ul class="actions stacked">
-				<li><a href="#" class="button">Learn More</a></li>
+				<li><a href="https://github.com/SobinJohnson/Bus-Reservation-System" class="button">Learn More</a></li>
 			</ul>
 		</div>
 		<div class="image">
@@ -111,7 +111,7 @@
 			<h2>SRM GPA Calculator</h2>
 			<p>A C program made to specifically ease out the process of calculating GPA based on the marks earned in each course along with their credits. </p>
 			<ul class="actions stacked">
-				<li><a href="#" class="button">Learn More</a></li>
+				<li><a href="https://github.com/SobinJohnson/SRM-GPA-Calculator" class="button">Learn More</a></li>
 			</ul>
 		</div>
 		<div class="image">
