--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 										<h3>LED Board</h3>
 										<p>Another geometry nodes inspired projects rendered in a night setting.</p>
 										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
+											<li><span class="button small">Expand</span></li>
 										</ul>
 									</div>
 								</article>
@@ -148,7 +148,7 @@
 										<h3>Donut that started it All</h3>
 										<p>The first render I started out with. Thanks to Andrew Price to let me into his wonderful journey of 3D. </p>
 										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
+											<li><span class="button small">Expand</span></li>
 										</ul>
 									</div>
 								</article>
@@ -160,7 +160,8 @@
 										<h3>Drowning in Worldly Pleasures</h3>
 										<p>Project testing out the water caustics and the beauty of ray tracing in Blender.</p>
 										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
+											<li><span class="button small">Expand</span></li>
+											
 										</ul>
 									</div>
 								</article>
@@ -172,7 +173,7 @@
 										<h3>Dead Tunnel</h3>
 										<p>Project focused on texturing, all the textures and models weere made from scratch using Blender and few online resources.</p>
 										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
+											<li><span class="button small">Expand</span></li>
 										</ul>
 									</div>
 								</article>
@@ -184,7 +185,7 @@
 										<h3>Pirate Bay</h3>
 										<p>Another modelling and texturing focused project, most of the textures in this project are procedurally made inside blender.</p>
 										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
+											<li><span class="button small">Expand</span></li>
 										</ul>
 									</div>
 								</article>
@@ -195,11 +196,11 @@
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="https://twitter.com/socalledsobin" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-								<!-- <li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li> -->
+								<li><a href="https://www.artstation.com/sobinjohnson" class="icon brands style2 fa-artstation"><span class="label">Artstation</span></a></li>
 								<li><a href="https://www.instagram.com/socalledsobin/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://twitter.com/socalledsobin" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
 								<!-- <li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li> -->
-								<!--<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li> -->
+								<li><a href="mailto:sobinjohnson03@gmail.com]" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</div>
 					</footer>
