--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h3>More projects </h3>
+							<p>See more of my projects on <a href="https://www.artstation.com/sobinjohnson">Artstation</a>.</p>
 						</div>
 
 						<!-- Gallery -->
