--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<div id="wrapper" class="divided">
 
 				<!-- One -->
-					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+					<section class="banner style1 orient-left content-align-center fullscreen onload-content-fade-up">
 						<div class="content">
 							<h1>Sobin Johnson</h1>
 							<p class="major">A 3D artist and an aspiring software devloper well versed in C,C++.</p>
@@ -30,7 +30,7 @@
 					</section>
 
 				<!-- Two -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in onscroll-content-fade-right" id="first">
 						<div class="content">
 							<h2>Tranquil</h2>
 							<p>A self project I made getting inspiration from Versace perfume advertisement. The project came out to be very fruitful to me as it helped me getting familiar with product lighting and product showcase. Also it helped me improve my skills in product rendering and in general reflective surface rendering.</p>
@@ -44,7 +44,7 @@
 					</section>
 
 				<!-- Three -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in onscroll-content-fade-left">
 						<div class="content">
 							<h2>The Neon Abyss</h2>
 							<p>An Environment design project I took in. One of the most ambitious project of mine, took lots of insparition from work of Ian Hubert and William Landgren. Through the project I learnt a lot about environment design, environment lighting and City Building in Blender. </p>
@@ -58,7 +58,7 @@
 					</section>
 
 				<!-- Four -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in onscroll-content-fade-right">
 						<div class="content">
 							<h2>Pride Heart</h2>
 							<p>A geometry nodes project, taking advantage of the excelent procedural geometry nodes in blender to create the beating pride heart, moving in a wavy motion. Also was an attemt to support the LGBTQ community.</p>
@@ -71,7 +71,7 @@
 						</div>
 					</section>
 				<!-- Five-->
-								<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+								<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in onscroll-content-fade-left">
 									<div class="content">
 										<h2>The Halloween Smile</h2>
 										<p>One of the first projects I did on Blender. It was a project focused basic modelling and texturing. All the textures in this project were procedurally-made. </p>
@@ -92,7 +92,7 @@
 		</div>
 	</section>
 	<!-- Two -->
-	<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+	<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in onscroll-image-fade-in onscroll-content-fade-right" id="first">
 		<div class="content">
 			<h2>Bus Reservation System</h2>
 			<p>A C project that showcases a functional bus reservation system.</p>
@@ -106,7 +106,7 @@
 	</section>
 
 <!-- Three -->
-	<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+	<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in onscroll-content-fade-left">
 		<div class="content">
 			<h2>SRM GPA Calculator</h2>
 			<p>A C program made to specifically ease out the process of calculating GPA based on the marks earned in each course along with their credits. </p>
