--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
-									<a href="images/gallery/fulls/01.png" class="image">
-										<img src="images/gallery/thumbs/01.png" alt="" />
+									<a href="images/gallery/fulls/01.jpg" class="image">
+										<img src="images/gallery/thumbs/01.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>LED Board</h3>
@@ -141,8 +141,8 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/02.png" class="image">
-										<img src="images/gallery/thumbs/02.png" alt="" />
+									<a href="images/gallery/fulls/02.jpg" class="image">
+										<img src="images/gallery/thumbs/02.jpg" alt="" />
 									</a>
 
 									<div class="caption">
@@ -154,8 +154,8 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/03.png" class="image">
-										<img src="images/gallery/thumbs/03.png" alt="" />
+									<a href="images/gallery/fulls/03.jpg" class="image">
+										<img src="images/gallery/thumbs/03.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Drowning in Worldly Pleasures</h3>
@@ -167,8 +167,8 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/04.png" class="image">
-										<img src="images/gallery/thumbs/04.png" alt="" />
+									<a href="images/gallery/fulls/04.jpg" class="image">
+										<img src="images/gallery/thumbs/04.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Dead Tunnel</h3>
@@ -179,8 +179,8 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/05.png" class="image">
-										<img src="images/gallery/thumbs/05.png" alt="" />
+									<a href="images/gallery/fulls/05.jpg" class="image">
+										<img src="images/gallery/thumbs/05.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Pirate Bay</h3>
