--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<section class="banner style1 orient-left content-align-center fullscreen onload-content-fade-up">
 						<div class="content">
 							<h1>Sobin Johnson</h1>
-							<p class="major">A 3D artist and an aspiring software devloper well versed in C,C++.</p>
+							<p class="major">A 3D artist and an aspiring software devloper well versed in Python andC++.</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
 							</ul>
@@ -88,7 +88,7 @@
 	<section class="wrapper style1 align-center">
 		<div class="inner">
 			
-			<h1> C & C++ Projects </h1>
+			<h1> Technical Projects </h1>
 		</div>
 	</section>
 	<!-- Two -->
