--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<section class="banner style1 orient-left content-align-center fullscreen onload-content-fade-up">
 						<div class="content">
 							<h1>Sobin Johnson</h1>
-							<p class="major">A 3D artist and an aspiring software devloper well versed in Python and C++.</p>
+							<p class="major">An aspiring 3D artist and software devloper well versed in Python and C++.</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
 							</ul>
