--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 								<li><a href="https://www.artstation.com/sobinjohnson" class="icon brands style2 fa-artstation"><span class="label">Artstation</span></a></li>
 								<li><a href="https://www.instagram.com/socalledsobin/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://twitter.com/socalledsobin" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-								<!-- <li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li> -->
+								<li><a href="https://www.linkedin.com/in/sobin-johnson/" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li> 
 								<li><a href="mailto:sobinjohnson03@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</div>
