--- a/index.html
+++ b/index.html
@@ -15,198 +15,212 @@
 	<body class="is-preload">
 
 		<!-- Wrapper -->
-			<div id="wrapper" class="divided">
+		<div id="wrapper" class="divided">
 
-				<!-- One -->
-					<section class="banner style1 orient-left content-align-center fullscreen onload-content-fade-up">
-						<div class="content">
-							<h1>Sobin Johnson</h1>
-							<p class="major">An aspiring 3D artist and software devloper well versed in Python and C++.</p>
-							<ul class="actions stacked">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
+			<!-- One -->
+			<section class="banner style1 orient-left content-align-center fullscreen onload-content-fade-up">
+				<div class="content">
+					<h1>Sobin Johnson</h1>
+					<p class="major">An aspiring 3D artist and software devloper well versed in Python and C++.</p>
+					<ul class="actions stacked">
+						<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
+					</ul>
+				</div>
+
+			</section>
+
+			<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in onscroll-content-fade-left" id="first">
+				<div class="content">
+					<h2>Gullak</h2>
+					<p>Gullak, an Indian earthen pot used as a piggy bank, is a a very sentimental piece to most of the middle class community because of the efforts you put in by putting money little by little into it and the joy u get once you break it and realise how much u have saved over the period of time. The momentary joy and excitement is incomparable. This project is my attempt to realism and still life in which I tried imitating the importance and significance it holds by making it my subject and lighting it in a godly Rembrandt lighting. </p>
+					<ul class="actions stacked">
+						<li><a href="https://sobinjohnson.artstation.com/projects/m8zrAe" class="button">Learn More</a></li>
+					</ul>
+				</div>
+				<div class="image">
+					<img src="images/spotlight07.jpg" alt="" />
+				</div>
+			</section>
+
+
+			<!-- Two -->
+			<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in onscroll-content-fade-right" >
+				<div class="content">
+					<h2>Tranquil</h2>
+					<p>A self project I made getting inspiration from Versace perfume advertisement. The project came out to be very fruitful to me as it helped me getting familiar with product lighting and product showcase. Also it helped me improve my skills in product rendering and in general reflective surface rendering.</p>
+					<ul class="actions stacked">
+						<li><a href="https://sobinjohnson.artstation.com/projects/Lezzlw" class="button">Learn More</a></li>
+					</ul>
+				</div>
+				<div class="image">
+					<img src="images/spotlight01.jpg" alt="" />
+				</div>
+			</section>
+
+			<!-- Three -->
+			<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in onscroll-content-fade-left">
+				<div class="content">
+					<h2>The Neon Abyss</h2>
+					<p>An Environment design project I took in. One of the most ambitious project of mine, took lots of insparition from work of Ian Hubert and William Landgren. Through the project I learnt a lot about environment design, environment lighting and City Building in Blender. </p>
+					<ul class="actions stacked">
+						<li><a href="https://sobinjohnson.artstation.com/projects/lR22LY" class="button">Learn More</a></li>
+					</ul>
+				</div>
+				<div class="image">
+					<img src="images/spotlight02.jpg" alt="" />
+				</div>
+			</section>
+
+			<!-- Four -->
+			<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in onscroll-content-fade-right">
+				<div class="content">
+					<h2>Pride Heart</h2>
+					<p>A geometry nodes project, taking advantage of the excelent procedural geometry nodes in blender to create the beating pride heart, moving in a wavy motion. Also was an attemt to support the LGBTQ community.</p>
+					<ul class="actions stacked">
+						<li><a href="https://sobinjohnson.artstation.com/projects/RnxxgO" class="button">Learn More</a></li>
+					</ul>
+				</div>
+				<div class="image">
+					<img src="images/spotlight03.jpg" alt="" />
+				</div>
+			</section>
+			<!-- Five-->
+			<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in onscroll-content-fade-left">
+				<div class="content">
+					<h2>The Halloween Smile</h2>
+					<p>One of the first projects I did on Blender. It was a project focused basic modelling and texturing. All the textures in this project were procedurally-made. </p>
+					<ul class="actions stacked">
+						<li><a href="https://sobinjohnson.artstation.com/projects/B3NNV4" class="button">Learn More</a></li>
+					</ul>
+				</div>
+				<div class="image">
+					<img src="images/spotlight04.jpg" alt="" />
+				</div>
+			</section>
+
+			<!-- six -->
+			<section class="wrapper style1 align-center">
+				<div class="inner">
+
+					<h1> Technical Projects </h1>
+				</div>
+			</section>
+			<!-- Two -->
+			<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in onscroll-image-fade-in onscroll-content-fade-right" id="first">
+				<div class="content">
+					<h2>Bus Reservation System</h2>
+					<p>A C project that showcases a functional bus reservation system.</p>
+					<ul class="actions stacked">
+						<li><a href="https://github.com/SobinJohnson/Bus-Reservation-System" class="button">Learn More</a></li>
+					</ul>
+				</div>
+				<div class="image">
+					<img src="images/spotlight05.jpg" alt="" />
+				</div>
+			</section>
+
+			<!-- Three -->
+			<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in onscroll-content-fade-left">
+				<div class="content">
+					<h2>SRM GPA Calculator</h2>
+					<p>A C program made to specifically ease out the process of calculating GPA based on the marks earned in each course along with their credits. </p>
+					<ul class="actions stacked">
+						<li><a href="https://github.com/SobinJohnson/SRM-GPA-Calculator" class="button">Learn More</a></li>
+					</ul>
+				</div>
+				<div class="image">
+					<img src="images/spotlight06.png" alt="" />
+				</div>
+			</section>
+
+			<!-- Six -->
+			<section class="wrapper style1 align-center">
+				<div class="inner">
+					<h3>More projects </h3>
+					<p>See more of my projects on <a href="https://www.artstation.com/sobinjohnson">Artstation</a>.</p>
+				</div>
+
+				<!-- Gallery -->
+				<div class="gallery style2 medium lightbox onscroll-fade-in">
+					<article>
+						<a href="images/gallery/fulls/01.jpg" class="image">
+							<img src="images/gallery/thumbs/01.jpg" alt="" />
+						</a>
+						<div class="caption">
+							<h3>LED Board</h3>
+							<p>Another geometry nodes inspired projects rendered in a night setting.</p>
+							<ul class="actions fixed">
+								<li><span class="button small">Expand</span></li>
 							</ul>
 						</div>
-						
-					</section>
+					</article>
+					<article>
+						<a href="images/gallery/fulls/02.jpg" class="image">
+							<img src="images/gallery/thumbs/02.jpg" alt="" />
+						</a>
 
-				<!-- Two -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in onscroll-content-fade-right" id="first">
-						<div class="content">
-							<h2>Tranquil</h2>
-							<p>A self project I made getting inspiration from Versace perfume advertisement. The project came out to be very fruitful to me as it helped me getting familiar with product lighting and product showcase. Also it helped me improve my skills in product rendering and in general reflective surface rendering.</p>
-							<ul class="actions stacked">
-								<li><a href="https://www.artstation.com/artwork/Lezzlw" class="button">Learn More</a></li>
+						<div class="caption">
+							<h3>Donut that started it All</h3>
+							<p>The first render I started out with. Thanks to Andrew Price to let me into his wonderful journey of 3D. </p>
+							<ul class="actions fixed">
+								<li><span class="button small">Expand</span></li>
 							</ul>
 						</div>
-						<div class="image">
-							<img src="images/spotlight01.jpg" alt="" />
-						</div>
-					</section>
+					</article>
+					<article>
+						<a href="images/gallery/fulls/03.jpg" class="image">
+							<img src="images/gallery/thumbs/03.jpg" alt="" />
+						</a>
+						<div class="caption">
+							<h3>Drowning in Worldly Pleasures</h3>
+							<p>Project testing out the water caustics and the beauty of ray tracing in Blender.</p>
+							<ul class="actions fixed">
+								<li><span class="button small">Expand</span></li>
 
-				<!-- Three -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in onscroll-content-fade-left">
-						<div class="content">
-							<h2>The Neon Abyss</h2>
-							<p>An Environment design project I took in. One of the most ambitious project of mine, took lots of insparition from work of Ian Hubert and William Landgren. Through the project I learnt a lot about environment design, environment lighting and City Building in Blender. </p>
-							<ul class="actions stacked">
-								<li><a href="https://www.artstation.com/artwork/lR22LY" class="button">Learn More</a></li>
 							</ul>
 						</div>
-						<div class="image">
-							<img src="images/spotlight02.jpg" alt="" />
-						</div>
-					</section>
-
-				<!-- Four -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in onscroll-content-fade-right">
-						<div class="content">
-							<h2>Pride Heart</h2>
-							<p>A geometry nodes project, taking advantage of the excelent procedural geometry nodes in blender to create the beating pride heart, moving in a wavy motion. Also was an attemt to support the LGBTQ community.</p>
-							<ul class="actions stacked">
-								<li><a href="https://www.artstation.com/artwork/RnxxgO" class="button">Learn More</a></li>
+					</article>
+					<article>
+						<a href="images/gallery/fulls/04.jpg" class="image">
+							<img src="images/gallery/thumbs/04.jpg" alt="" />
+						</a>
+						<div class="caption">
+							<h3>Dead Tunnel</h3>
+							<p>Project focused on texturing, all the textures and models weere made from scratch using Blender and few online resources.</p>
+							<ul class="actions fixed">
+								<li><span class="button small">Expand</span></li>
 							</ul>
 						</div>
-						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
-						</div>
-					</section>
-				<!-- Five-->
-								<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in onscroll-content-fade-left">
-									<div class="content">
-										<h2>The Halloween Smile</h2>
-										<p>One of the first projects I did on Blender. It was a project focused basic modelling and texturing. All the textures in this project were procedurally-made. </p>
-										<ul class="actions stacked">
-											<li><a href="https://www.artstation.com/artwork/B3NNV4" class="button">Learn More</a></li>
-										</ul>
-									</div>
-									<div class="image">
-										<img src="images/spotlight04.jpg" alt="" />
-									</div>
-								</section>
-			
-	<!-- six -->
-	<section class="wrapper style1 align-center">
-		<div class="inner">
-			
-			<h1> Technical Projects </h1>
-		</div>
-	</section>
-	<!-- Two -->
-	<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in onscroll-image-fade-in onscroll-content-fade-right" id="first">
-		<div class="content">
-			<h2>Bus Reservation System</h2>
-			<p>A C project that showcases a functional bus reservation system.</p>
-			<ul class="actions stacked">
-				<li><a href="https://github.com/SobinJohnson/Bus-Reservation-System" class="button">Learn More</a></li>
-			</ul>
-		</div>
-		<div class="image">
-			<img src="images/spotlight05.jpg" alt="" />
-		</div>
-	</section>
-
-<!-- Three -->
-	<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in onscroll-content-fade-left">
-		<div class="content">
-			<h2>SRM GPA Calculator</h2>
-			<p>A C program made to specifically ease out the process of calculating GPA based on the marks earned in each course along with their credits. </p>
-			<ul class="actions stacked">
-				<li><a href="https://github.com/SobinJohnson/SRM-GPA-Calculator" class="button">Learn More</a></li>
-			</ul>
-		</div>
-		<div class="image">
-			<img src="images/spotlight06.png" alt="" />
-		</div>
-	</section>
-
-				<!-- Six -->
-					<section class="wrapper style1 align-center">
-						<div class="inner">
-							<h3>More projects </h3>
-							<p>See more of my projects on <a href="https://www.artstation.com/sobinjohnson">Artstation</a>.</p>
-						</div>
-
-						<!-- Gallery -->
-							<div class="gallery style2 medium lightbox onscroll-fade-in">
-								<article>
-									<a href="images/gallery/fulls/01.jpg" class="image">
-										<img src="images/gallery/thumbs/01.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>LED Board</h3>
-										<p>Another geometry nodes inspired projects rendered in a night setting.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Expand</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/02.jpg" class="image">
-										<img src="images/gallery/thumbs/02.jpg" alt="" />
-									</a>
-
-									<div class="caption">
-										<h3>Donut that started it All</h3>
-										<p>The first render I started out with. Thanks to Andrew Price to let me into his wonderful journey of 3D. </p>
-										<ul class="actions fixed">
-											<li><span class="button small">Expand</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/03.jpg" class="image">
-										<img src="images/gallery/thumbs/03.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Drowning in Worldly Pleasures</h3>
-										<p>Project testing out the water caustics and the beauty of ray tracing in Blender.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Expand</span></li>
-											
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/04.jpg" class="image">
-										<img src="images/gallery/thumbs/04.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Dead Tunnel</h3>
-										<p>Project focused on texturing, all the textures and models weere made from scratch using Blender and few online resources.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Expand</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/05.jpg" class="image">
-										<img src="images/gallery/thumbs/05.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Pirate Bay</h3>
-										<p>Another modelling and texturing focused project, most of the textures in this project are procedurally made inside blender.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Expand</span></li>
-										</ul>
-									</div>
-								</article>
-							</div>
-
-					</section>
-				<!-- Footer -->
-					<footer class="wrapper style1 align-center">
-						<div class="inner">
-							<ul class="icons">
-								<li><a href="https://www.artstation.com/sobinjohnson" class="icon brands style2 fa-artstation"><span class="label">Artstation</span></a></li>
-								<li><a href="https://www.instagram.com/socalledsobin/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="https://twitter.com/socalledsobin" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="https://www.linkedin.com/in/sobin-johnson/" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li> 
-								<li><a href="mailto:sobinjohnson03@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+					</article>
+					<article>
+						<a href="images/gallery/fulls/05.jpg" class="image">
+							<img src="images/gallery/thumbs/05.jpg" alt="" />
+						</a>
+						<div class="caption">
+							<h3>Pirate Bay</h3>
+							<p>Another modelling and texturing focused project, most of the textures in this project are procedurally made inside blender.</p>
+							<ul class="actions fixed">
+								<li><span class="button small">Expand</span></li>
 							</ul>
 						</div>
-					</footer>
+					</article>
+				</div>
 
-			</div>
+			</section>
+			<!-- Footer -->
+			<footer class="wrapper style1 align-center">
+				<div class="inner">
+					<ul class="icons">
+						<li><a href="https://www.artstation.com/sobinjohnson" class="icon brands style2 fa-artstation"><span class="label">Artstation</span></a></li>
+						<li><a href="https://www.instagram.com/socalledsobin/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://twitter.com/socalledsobin" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.linkedin.com/in/sobin-johnson/" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						<li><a href="mailto:sobinjohnson03@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+					</ul>
+				</div>
+			</footer>
+
+		</div>
 			
 
 		<!-- Scripts -->
