--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in onscroll-content-fade-left" id="first">
 				<div class="content">
 					<h2>Gullak</h2>
-					<p>Gullak, an Indian earthen pot used as a piggy bank, is a a very sentimental piece to most of the middle class community because of the efforts you put in by putting money little by little into it and the joy u get once you break it and realise how much u have saved over the period of time. The momentary joy and excitement is incomparable. This project is my attempt to realism and still life in which I tried imitating the importance and significance it holds by making it my subject and lighting it in a godly Rembrandt lighting. </p>
+					<p>Gullak, an Indian earthen pot used as a piggy bank, is a a very sentimental piece to most of the middle class community because of the efforts you put in by putting money little by little into it and the joy you get once you break it and realise how much you've saved over the period of time. The momentary joy and excitement is incomparable. This project is my attempt to realism and still life in which I tried imitating the importance and significance it holds by making it my subject and lighting it in a godly Rembrandt lighting. </p>
 					<ul class="actions stacked">
 						<li><a href="https://sobinjohnson.artstation.com/projects/m8zrAe" class="button">Learn More</a></li>
 					</ul>
